// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AgentConsole default 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          AgentConsole
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          default
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <div
      className="agentConsole"
      data-testid="agentConsole"
    >
      <h1>
        welcome to amazon connect agent console
      </h1>
      <section
        id="ccpContainer"
      />
      <section
        id="section-main"
      >
        <header>
          <h1>
            amazon connect CCP integration details
          </h1>
        </header>
        <fieldset>
          <legend>
            contact details
          </legend>
          <div
            id="details"
          />
        </fieldset>
      </section>
    </div>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "display": "flex",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "justifyContent": "space-between",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#444",
                  }
                }
              >
                &lt;
                AgentConsole
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#444",
                  }
                }
              >
                /&gt;
              </span>
            </div>
          </div>
          <button
            onClick={[Function]}
            style={
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "rgb(255, 255, 255)",
                "borderColor": "rgb(238, 238, 238)",
                "borderImage": "initial",
                "borderRadius": "3px",
                "borderStyle": "solid",
                "borderWidth": "1px",
                "cursor": "pointer",
                "flexShrink": "0",
                "fontSize": "13px",
                "overflow": "hidden",
                "padding": "3px 10px",
              }
            }
            type="button"
          >
            Copy
          </button>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            AgentConsole
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with some emoji 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Button
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with some emoji
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <span
          aria-label="so cool"
          role="img"
        >
          😀 😎 👍 💯
        </span>
      </span>
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "display": "flex",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "justifyContent": "space-between",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  WithStyles(ForwardRef(Button))
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onClick
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          actionHandler
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      variant
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          contained
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      color
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          secondary
                        </span>
                        "
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;
                    span
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        role
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            img
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        aria-label
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            so cool
                          </span>
                          "
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 48,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    😀 😎 👍 💯
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#444",
                      }
                    }
                  >
                    &lt;/
                    span
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;/
                  WithStyles(ForwardRef(Button))
                  &gt;
                </span>
              </div>
            </div>
          </div>
          <button
            onClick={[Function]}
            style={
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "rgb(255, 255, 255)",
                "borderColor": "rgb(238, 238, 238)",
                "borderImage": "initial",
                "borderRadius": "3px",
                "borderStyle": "solid",
                "borderWidth": "1px",
                "cursor": "pointer",
                "flexShrink": "0",
                "fontSize": "13px",
                "overflow": "hidden",
                "padding": "3px 10px",
              }
            }
            type="button"
          >
            Copy
          </button>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            WithStyles(ForwardRef(Button))
            " Component
          </h3>
          <table
            className="info-table"
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="info-table-monospace"
                >
                  classes
                </td>
                <td
                  className="info-table-monospace"
                >
                  <span>
                    object
                  </span>
                </td>
                <td
                  className={null}
                >
                  -
                </td>
                <td
                  className={null}
                >
                  -
                </td>
                <td
                  className={null}
                />
              </tr>
              <tr>
                <td
                  className="info-table-monospace"
                >
                  innerRef
                </td>
                <td
                  className="info-table-monospace"
                >
                  <span>
                    other
                  </span>
                </td>
                <td
                  className={null}
                >
                  yes
                </td>
                <td
                  className={null}
                >
                  -
                </td>
                <td
                  className={null}
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with text 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          Button
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with text
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnd={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Hello Storybook
      </span>
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "display": "flex",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "justifyContent": "space-between",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  WithStyles(ForwardRef(Button))
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      variant
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          outlined
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      color
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          primary
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onClick
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          actionHandler
                        </span>
                        }
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  Hello Storybook
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;/
                  WithStyles(ForwardRef(Button))
                  &gt;
                </span>
              </div>
            </div>
          </div>
          <button
            onClick={[Function]}
            style={
              Object {
                "alignSelf": "flex-start",
                "backgroundColor": "rgb(255, 255, 255)",
                "borderColor": "rgb(238, 238, 238)",
                "borderImage": "initial",
                "borderRadius": "3px",
                "borderStyle": "solid",
                "borderWidth": "1px",
                "cursor": "pointer",
                "flexShrink": "0",
                "fontSize": "13px",
                "overflow": "hidden",
                "padding": "3px 10px",
              }
            }
            type="button"
          >
            Copy
          </button>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            WithStyles(ForwardRef(Button))
            " Component
          </h3>
          <table
            className="info-table"
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="info-table-monospace"
                >
                  classes
                </td>
                <td
                  className="info-table-monospace"
                >
                  <span>
                    object
                  </span>
                </td>
                <td
                  className={null}
                >
                  -
                </td>
                <td
                  className={null}
                >
                  -
                </td>
                <td
                  className={null}
                />
              </tr>
              <tr>
                <td
                  className="info-table-monospace"
                >
                  innerRef
                </td>
                <td
                  className="info-table-monospace"
                >
                  <span>
                    other
                  </span>
                </td>
                <td
                  className={null}
                >
                  yes
                </td>
                <td
                  className={null}
                >
                  -
                </td>
                <td
                  className={null}
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
